# teste_actions_runner

./: .gitignore  executar.sh  main.py  pyproject.toml  teste.txt  teste_actions_runner.py  teste_print.py
.github/workflows/: deploy.yml  verify_develop.yml
