[project]
name = "teste-actions-runner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fdb==2.0.4",
    "pandas>=2.0.0,<2.1.0",
    "numpy>=1.24.0,<1.26.0",
    "psycopg2-binary>=2.9.10",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.4",
    "vieutil>=0.5",
]
